--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "element-plus": "^2.8.8",
     "sass-embedded": "^1.81.0",
+    "three": "^0.170.0",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
   },
